[package]
name = "lisk-vanity"
version = "0.1.0"
description = "Generate short Lisk addresses"
keywords = ["cryptocurrency", "nanocurrency", "opencl"]
authors = ["Simon Warta <simon@warta.it>"]
readme = "README.md"
repository = "https://github.com/webmaster128/lisk-vanity"
license = "BSD-2-Clause"

[features]
gpu = ["ocl"]
default = ["gpu"]

[dependencies]
ed25519-dalek = "0.6.1"
clap = "2.30.0"
num_cpus = "1.8.0"
num-bigint = "0.1.43"
rand = "0.4.2"
hex = "0.3.1"
digest = "0.7.2"
num-traits = "0.2.0"
sha2 = "0.7"
ocl = { version = "0.19.1", optional = true }
